# bookshare-launch-1

./: .gitignore  AGENTS.md  README.md  middleware.ts  package-lock.json  package.json  tsconfig.tsbuildinfo  tsconfig.typecheck.tsbuildinfo
app/: globals.css  layout.tsx  page.tsx
app/browse/: page.tsx
app/dashboard/: page.tsx
app/featured/: page.tsx
app/login/: page.tsx
app/requests/: page.tsx
app/signup/: page.tsx
app/works/[id]/: page.tsx
app/works/[id]/edit/: page.tsx
app/works/new/: page.tsx
apps/desktop/: .env.example  README.md  index.html  package.json
apps/desktop/src/: App.tsx  styles.css  types.ts  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/lib/: device.ts  env.ts  fingerprint.ts  format.ts  supabase.ts
apps/desktop/src/services/: desktop-auth-service.ts  desktop-backend-service.ts  desktop-file-service.ts
components/: config-notice.tsx  landing-page.tsx  message-banner.tsx  request-access-form.tsx  request-response-form.tsx  site-header.tsx  work-form.tsx
docs/: codex-build-brief.md
lib/: auth.ts  env.ts  queries.ts  routing.ts  utils.ts  validation.ts
lib/actions/: auth.ts  requests.ts  works.ts
lib/supabase/: browser.ts  middleware.ts  server.ts  shared.ts
supabase/migrations/: 20260410_000001_bookshare_web_phase.sql  20260410_000002_bookshare_desktop_scaffold.sql
supabase/seed/: demo_seed.sql
types/: database.ts
